testsuite/tests/rep-poly/RepPolyApp.stderr

RepPolyApp.hs:11:9: error:
    • The argument ‘(undefined :: a)’ of ‘f’
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE rep
    • In the expression: f (undefined :: a)
      In an equation for ‘foo’: foo f = f (undefined :: a)
